Adj and add children to top container

--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
 <body>
     <div class="top">
         <h1 class="header">Header Logo</h1>
-        <div class="links"></div>
-        <div class="left"></div>
-        <div class="right"></div>
+        <div class="links">
+            <ul>
+                <li><a href="#">Link one</a></li>
+                <li><a href="#">Link two</a></li>
+                <li><a href="#">Link three</a></li>
+            </ul></div>
+        <div class="left">
+            <div class="info">
+                <h2>This wesite is awesome</h2>
+                <p>This website has some bla bla</p>
+                <button><a href="#">Sign up</a></button>
+            </div>
+        </div>
+        <div class="right">
+            <div><img src="../landing-page/img/codes.png" alt="Green binarys on a screen"></div>
+        </div>
 
     </div>
 
