--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="left">
             <div class="info">
                 <h2>This wesite is awesome</h2>
-                <p>This website has some bla bla</p>
+                <div>This website has some bla bla</div>
                 <button><a href="#">Sign up</a></button>
             </div>
         </div>
@@ -27,20 +27,45 @@
 
     </div>
 
-    <div class="imgs">
+    <div class="main">
+        <div class="title">Some random information!</div>
 
+        <div class="media">
+          <img src="../landing-page/img/qr.png" alt="Blabla">
+          <div class="text">Some info under the illustration bla bla bla bla</div>
+        </div>
+        <div class="media">
+            <img src="../landing-page/img/qr.png" alt="Blabla">
+          <div class="text">Some info under the illustration bla bla bla bla</div>
+        </div>
+        <div class="media">
+            <img src="../landing-page/img/qr.png" alt="Blabla">
+          <div class="text">Some info under the illustration bla bla bla bla</div>
+        </div>
+        <div class="media">
+            <img src="../landing-page/img/qr.png" alt="Blabla">
+          <div class="text">Some info under the illustration bla bla bla bla</div>
+        </div>
     </div>
 
     <div class="container">
+        <div class="text-box">
+            <p class="main-text">This is a motherfucking amazing qoute</p>
+            <p class="sub-text">- Barack Obama</p>
+        </div>
 
     </div>
 
     <div class="bottom">
-
+        <div class="bottom-box">
+            <p class="b-maintxt">Call to action motherfucker!</p>
+            <p class="b-subtxt">Sign up for a free prostata exam</p>
+            <button><a href="#">Sign up</a></button>
+        </div>
     </div>
 
     <div class="footer">
-
+        Copyright © The Odin Project - Coded by Stormofcodes
     </div>
 
 </body>
