Import font, adj elements

--- a/index.html
+++ b/index.html
@@ -5,46 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+    </style>
 </head>
 <body>
     <div class="top">
-        <h1 class="header">Header Logo</h1>
+        <div class="logo"><img class="logo" src="../landing-page/img/logo.png" alt="Logo neocortex">
+        <h1 class="header">NeoCortex</h1>
+        </div>
         <div class="links">
             <ul>
                 <li><a href="#">Link one</a></li>
                 <li><a href="#">Link two</a></li>
                 <li><a href="#">Link three</a></li>
             </ul></div>
+    </div>
+    <div class="subtop">
         <div class="left">
             <div class="info">
-                <h2>This wesite is awesome</h2>
-                <div>This website has some bla bla</div>
-                <button><a href="#">Sign up</a></button>
+                <h2>Escape the Matrix</h2>
+                <div>Tired of living on autopilot? The matrix is all in your head - a mindset designed to keep
+                    you stuck. It's time to break free from the mental prison of distractions, expectations and
+                    endless noise. 
+                   <p>This is about shifting your perspective, questioning everything and stepping into your
+                    true power. No more following the herd. Are you ready to change your mindset and escape?
+                   </p>
+                </div>
+                <button><a href="#">Unplug Now</a></button>
             </div>
         </div>
         <div class="right">
-            <div><img src="../landing-page/img/codes.png" alt="Green binarys on a screen"></div>
+            <div><img class="topimg" src="../landing-page/img/exit6.png" alt="Green binarys on a screen"></div>
         </div>
 
     </div>
 
+    <div class="title">Some random information!</div>
     <div class="main">
-        <div class="title">Some random information!</div>
+        
 
         <div class="media">
-          <img src="../landing-page/img/qr.png" alt="Blabla">
+          <img src="../landing-page/img/pill.png" alt="Blabla">
           <div class="text">Some info under the illustration bla bla bla bla</div>
         </div>
         <div class="media">
-            <img src="../landing-page/img/qr.png" alt="Blabla">
+            <img src="../landing-page/img/pill.png" alt="Blabla">
           <div class="text">Some info under the illustration bla bla bla bla</div>
         </div>
         <div class="media">
-            <img src="../landing-page/img/qr.png" alt="Blabla">
+            <img src="../landing-page/img/pill.png" alt="Blabla">
           <div class="text">Some info under the illustration bla bla bla bla</div>
         </div>
         <div class="media">
-            <img src="../landing-page/img/qr.png" alt="Blabla">
+            <img src="../landing-page/img/pill.png" alt="Blabla">
           <div class="text">Some info under the illustration bla bla bla bla</div>
         </div>
     </div>
@@ -61,7 +75,7 @@
         <div class="bottom-box">
             <p class="b-maintxt">Call to action motherfucker!</p>
             <p class="b-subtxt">Sign up for a free prostata exam</p>
-            <button><a href="#">Sign up</a></button>
+            <button><a href="#">Unplug Now</a></button>
         </div>
     </div>
 
