Adj the text for the page content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="subtop">
         <div class="left">
             <div class="info">
-                <h2>Escape the Matrix</h2>
+                <h2>ESCAPE THE MATRIX</h2>
                 <div>Tired of living on autopilot? The matrix is all in your head - a mindset designed to keep
                     you stuck. It's time to break free from the mental prison of distractions, expectations and
                     endless noise. 
@@ -32,7 +32,7 @@
                     true power. No more following the herd. Are you ready to change your mindset and escape?
                    </p>
                 </div>
-                <button><a href="#">Unplug Now</a></button>
+                <button><a href="#">Escape Now</a></button>
             </div>
         </div>
         <div class="right">
@@ -41,41 +41,41 @@
 
     </div>
 
-    <div class="title">Some random information!</div>
+    <div class="title">FREE YOUR MIND</div>
     <div class="main">
         
 
         <div class="media">
           <img src="../landing-page/img/pill.png" alt="Blabla">
-          <div class="text">Some info under the illustration bla bla bla bla</div>
+          <div class="text">The journey starts with a bold choice...</div>
         </div>
         <div class="media">
             <img src="../landing-page/img/pill.png" alt="Blabla">
-          <div class="text">Some info under the illustration bla bla bla bla</div>
+          <div class="text">Waking up is overrated - until you do it...</div>
         </div>
         <div class="media">
             <img src="../landing-page/img/pill.png" alt="Blabla">
-          <div class="text">Some info under the illustration bla bla bla bla</div>
+          <div class="text">Reality is just a glitch in the system...</div>
         </div>
         <div class="media">
             <img src="../landing-page/img/pill.png" alt="Blabla">
-          <div class="text">Some info under the illustration bla bla bla bla</div>
+          <div class="text">Once you see it, you can’t unsee it...</div>
         </div>
     </div>
 
     <div class="container">
         <div class="text-box">
-            <p class="main-text">This is a motherfucking amazing qoute</p>
-            <p class="sub-text">- Barack Obama</p>
+            <p class="main-text">I’m trying to free your mind, Neo. But I can only show you the door. You’re the one that has to walk through it.</p>
+            <p class="sub-text">- Some guy from The Matrix</p>
         </div>
 
     </div>
 
     <div class="bottom">
         <div class="bottom-box">
-            <p class="b-maintxt">Call to action motherfucker!</p>
-            <p class="b-subtxt">Sign up for a free prostata exam</p>
-            <button><a href="#">Unplug Now</a></button>
+            <div><p class="b-maintxt">Are you ready to make a change?</p>
+            <p class="b-subtxt">What are you waiting for...</p></div>
+            <button><a href="#">Escape Now</a></button>
         </div>
     </div>
 
