Modify links and images

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     true power. No more following the herd. Are you ready to change your mindset and escape?
                    </p>
                 </div>
-                <button><a href="#">Escape Now</a></button>
+                <button><a href="https://www.youtube.com/watch?v=TTzVwvTfXs4&ab_channel=AfterSkool" target="_blank" rel="noopener noreferrer">ESCAPE NOW</a></button>
             </div>
         </div>
         <div class="right">
-            <div><img class="topimg" src="../landing-page/img/exit6.png" alt="Green binarys on a screen"></div>
+            <div><img class="topimg" src="../landing-page/img/exit6.png" alt="Green glowing exit sign"></div>
         </div>
 
     </div>
@@ -46,19 +46,19 @@
         
 
         <div class="media">
-          <img src="../landing-page/img/pill.png" alt="Blabla">
+          <img src="../landing-page/img/pill.png" alt="Image of a neon glowing red pill">
           <div class="text">The journey starts with a bold choice...</div>
         </div>
         <div class="media">
-            <img src="../landing-page/img/pill.png" alt="Blabla">
+            <img src="../landing-page/img/pill.png" alt="Image of a neon glowing red pill">
           <div class="text">Waking up is overrated - until you do it...</div>
         </div>
         <div class="media">
-            <img src="../landing-page/img/pill.png" alt="Blabla">
+            <img src="../landing-page/img/pill.png" alt="Image of a neon glowing red pill">
           <div class="text">Reality is just a glitch in the system...</div>
         </div>
         <div class="media">
-            <img src="../landing-page/img/pill.png" alt="Blabla">
+            <img src="../landing-page/img/pill.png" alt="Image of a neon glowing red pill">
           <div class="text">Once you see it, you can’t unsee it...</div>
         </div>
     </div>
@@ -75,7 +75,7 @@
         <div class="bottom-box">
             <div><p class="b-maintxt">Are you ready to make a change?</p>
             <p class="b-subtxt">What are you waiting for...</p></div>
-            <button><a href="#">Escape Now</a></button>
+            <button><a href="https://www.youtube.com/watch?v=TTzVwvTfXs4&ab_channel=AfterSkool" target="_blank" rel="noopener noreferrer">ESCAPE NOW</a></button>
         </div>
     </div>
 
